@@ -5,6 +5,12 @@
 This document provides a high-level view of the changes to {project-name} by release.
 For a detailed view of what has changed, refer to the {uri-repo}/commits/master[commit history] on GitHub.
 
+== Unreleased
+
+=== Added
+
+* encode Markdown source passed to convert API to UTF-8 with universal newlines unless :encode option is false
+
 == 1.0.0.alpha.11 (2018-08-02) - @mojavelinux
 
 === Added
